Fix charts overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ body.dark-mode .loading {
 #chartContainer {
     border-bottom: none;
     border-radius: 4px 4px 0 0;
-    margin-bottom: -20px;
+    margin-bottom: -10px;
     height: 500px;
     position: relative;
     z-index: 1;
